# wp-cli

./: Cargo.toml
src/: args.rs  create_distribution.rs  main.rs
