[package]
name = "webprovisions-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["cargo", "derive"] }
copy_dir = "0.1.3"
dialoguer = "0.11.0"
serde_json = "1.0.115"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
serde = { version = "1.0.197", features = ["derive"] }
